--- a/tile1.css
+++ b/tile1.css
@@ -8,19 +8,17 @@
 
      grid-template-columns: 1fr;
      grid-auto-rows: minmax(3vh, auto);
-     padding-left: 30vw;
-     margin-right: 20vw;
-     left: 30vw;
+     padding-left: 20vw;
      gap: 9vh;
  }
 
  .tile-group {
      display: grid;
-     grid-template-columns: repeat(auto-fill, minmax(11.36vw, 1fr));
+     grid-template-columns: repeat(auto-fill, minmax(16.36vw, 1fr));
      grid-auto-rows: auto;
      font-family: sans-serif;
      margin-bottom: 5vh;
-     max-width: 56vw;
+     max-width: 100%;
      gap: 2vw;
      transform-origin: left top;
      column-gap: 0.2vw;
@@ -28,6 +26,13 @@
 
  .tile-group * {
      box-sizing: border-box;
+ }
+
+ .tile-text-content {
+
+     padding-left: 0.5vw;
+     width: 100%;
+
  }
 
  .tile-single {
@@ -38,20 +43,23 @@
          "description"
          "links";
 
+
      grid-template-columns: 1fr;
      grid-auto-rows: minmax(3vh, auto);
-     margin-bottom: 0vh;
+
+     width: 100%;
 
  }
 
-.tile-image {
-    max-width: 100%;
-    height: 18vh;
-    object-fit: cover;
-    display: block;
-    grid-area: img;
+ .tile-image {
+     grid-area: img;
+     max-width: 100%;
+     height: 25vh;
+     object-fit: cover;
+     display: block;
 
-}
+
+ }
 
 
  .tile-single img:hover {
@@ -61,50 +69,52 @@
 
 
  .tile-title {
-    grid-area: title;
-    width: 100%;
-    height: auto;
-    margin-bottom: 1.3vh;
+     grid-area: description;
+     width: 100%;
+     height: auto;
+     margin-bottom: 1.3vh;
+     font-size: 1.4rem;
+     order: 1;
 
  }
 
- 
-.tile-title a {
-    font-style: italic;
-    font-size: 0.97rem;
-    font-weight: bold;
-    color: #ff015d;
-    font-style: italic;
-    text-decoration: underline;
+
+ .tile-title a {
+     font-style: italic;
+     font-weight: bold;
+     color: #ff015d;
+     font-style: italic;
+     text-decoration: underline;
 
 
-}
+ }
 
-.tile-title a:hover {
-    filter: brightness(150%);
-}
+ .tile-title a:hover {
+     filter: brightness(150%);
+ }
 
 
-.tile-descriptions {
-    grid-area: description;
-    justify-content: space-between;
-    align-items: center;
-    font-family: 'Noto Serif', serif;
-    font-size: 0.96rem;
-    height: auto;
-}
+ .tile-descriptions {
+     grid-area: description;
+     justify-content: space-between;
+     align-items: center;
+     font-family: 'Noto Serif', serif;
+     font-size: 2rem;
+     height: auto;
+     order: 2;
+ }
 
-.tile-links{
-    grid-area: links;
-    
-    display: block;
-    justify-content: space-between;
-}
+ .tile-links {
+     grid-area: links;
+     order: 3;
+     display: block;
+     justify-content: space-between;
+ }
 
-.tile-links a:hover {
-    color: #ff015d;
-    filter: brightness(150%);
-}
+ .tile-links a:hover {
+     color: #ff015d;
+     filter: brightness(150%);
+ }
 
 
 
