--- a/tile1.css
+++ b/tile1.css
@@ -8,7 +8,10 @@
 
      grid-template-columns: 1fr;
      grid-auto-rows: minmax(3vh, auto);
-     padding-left: 20vw;
+ 
+     margin-left: 21.5vw;
+     margin-right: 1vw;
+     padding-right: 3vw;
      gap: 9vh;
  }
 
