--- a/tile1.css
+++ b/tile1.css
@@ -39,7 +39,8 @@
  }
 
  .tile-single {
-     display: grid;
+     display: flex;
+     flex-direction: column;
      grid-template-areas:
          "img"
          "title"
