--- a/tile1.css
+++ b/tile1.css
@@ -41,16 +41,7 @@
  .tile-single {
      display: flex;
      flex-direction: column;
-     grid-template-areas:
-         "img"
-         "title"
-         "description"
-         "links";
-
-
-     grid-template-columns: 1fr;
-     grid-auto-rows: minmax(3vh, auto);
-
+     gap: 3.5vh;
      width: 100%;
 
  }
