--- a/tile1.css
+++ b/tile1.css
@@ -9,7 +9,7 @@
      grid-template-columns: 1fr;
      grid-auto-rows: minmax(3vh, auto);
 
-     margin-left: 21.5vw;
+     margin-left: 20.5vw;
      margin-right: 1vw;
      padding-right: 3vw;
      gap: 9vh;
@@ -49,7 +49,7 @@
  .tile-image {
      grid-area: img;
      max-width: 100%;
-     height: 25vh;
+     height: 26vh;
      object-fit: cover;
      display: block;
 
@@ -115,7 +115,7 @@
 
  .vjdemo_header {
      grid-area: vjdemo_header_;
-     margin-top: 5vh;
+     margin-top: 1.5vh;
      font-size: 2.5rem;
      color: #777;
  }
@@ -130,6 +130,7 @@
      color: #777;
      padding-top: 3vh;
      margin-top: 5vh;
+     margin-bottom: 10.5vh;
  }
 
  .evpromo_videos {
