--- a/tile1.css
+++ b/tile1.css
@@ -20,7 +20,7 @@
      grid-template-columns: repeat(auto-fill, minmax(16.36vw, 1fr));
      grid-auto-rows: auto;
      font-family: sans-serif;
-     margin-bottom: 5vh;
+     margin-bottom: 1vh;
      max-width: 100%;
      gap: 2vw;
      transform-origin: left top;
@@ -129,10 +129,15 @@
      font-size: 2.5rem;
      color: #777;
      padding-top: 3vh;
-     margin-top: 5vh;
-     margin-bottom: 10.5vh;
+     margin-top: 6vh;
+     margin-bottom: 3.5vh;
  }
 
  .evpromo_videos {
      grid-area: evpromo_videos_;
+ }
+ .footer {
+    margin-top: 10.5vh;
+    padding-top: 2.5vh;
+    padding-bottom: 4vh;
  }
