redoing tile-page9

--- a/tile1.css
+++ b/tile1.css
@@ -4,7 +4,8 @@
          "vjdemo_header_"
          "vjdemo_videos_"
          "evpromo_header_"
-         "evpromo_videos_";
+         "evpromo_videos_"
+         "footer";
 
      grid-template-columns: 1fr;
      grid-auto-rows: minmax(3vh, auto);
@@ -137,6 +138,7 @@
      grid-area: evpromo_videos_;
  }
  .footer {
+    grid-area: footer;
     margin-top: 10.5vh;
     padding-top: 2.5vh;
     padding-bottom: 4vh;
