redoing tile-page11

--- a/tile1.css
+++ b/tile1.css
@@ -203,3 +203,12 @@
      }
 
  }
+
+
+ /* MOBILE VERSION GALAXY NOTE ANDROID 11 Horizontal */
+@media screen and (851px <=width <=950px) and (361px <=height <=450px) {
+
+     
+     }
+
+ 
