--- a/tile1.css
+++ b/tile1.css
@@ -159,6 +159,69 @@
      height: 7vh;
  }
 
+/* DESKTOP  NARROW 1 VERSION */
+@media screen and (611px<=width <=1220px) and (height >=210px){
+    .tile-group{
+         grid-template-columns: repeat(auto-fill, minmax(20.36vw, 1fr));
+    }
+
+ }
+
+ /* DESKTOP  NARROW 2 VERSION */
+@media screen and (611px<=width <=1155px) and (height >=210px){
+
+    .g-container{
+        padding-right: 12vw;
+    }
+
+    .tile-group{
+         grid-template-columns: repeat(auto-fill, minmax(26.36vw, 1fr));
+    }
+
+ }
+
+  /* DESKTOP  NARROW 3 VERSION */
+@media screen and (630px<=width <=950px) and (height >=210px){
+
+    .g-container{
+        padding-right: 12vw;
+        padding-left: 14vw;
+    }
+
+    .tile-group{
+         grid-template-columns: repeat(auto-fill, minmax(36.36vw, 1fr));
+    }
+
+ }
+
+
+   /* DESKTOP  NARROW 4 VERSION */
+@media screen and (width <=629px) and (height >=210px){
+
+    .g-container{
+        padding-right: 12vw;
+        padding-left: 18.5vw;
+    }
+
+    .tile-group{
+         grid-template-columns: repeat(auto-fill, minmax(36.36vw, 1fr));
+    }
+
+ }
+
+    /* DESKTOP  NARROW 5 VERSION */
+@media screen and (width <=523px) and (height >=210px){
+
+    .g-container{
+        margin-top: 12vh;
+        margin-left: -5vw;
+    }
+
+ }
+
+
+
+
  /* MOBILE VERSION GALAXY NOTE ANDROID 11 Vertical */
  @media screen and (380px <=width <=499px) and (761px <=height <=950px) {
 
